--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <strong>User:</strong>
-  <%= @ticket.user %>
+  <%= @ticket.user.name %>
 </p>
 
 <p>
   <strong>Pricedinner:</strong>
-  <%= @ticket.movie %>
+  <%= @movie %>
 </p>
 
 <p>
@@ -23,5 +23,5 @@
 <!-- Faltaria los demas cosos -->
 
 
-<%= link_to 'Edit', edit_ticket_path(@ticket) %> |
-<%= link_to 'Back', tickets_path %>
+
+
