Cambios en sed  mail

--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -48,7 +48,7 @@
 
           <div class="form-group col-xs-9" id="comprar" hidden> 
               <p>Las comprar en linea se hacen a traves de targetas credito.</p>
-              <select>
+              Tipo de targeta de credito: <select>
                 <option value="mastercard">MasterCard</option>
                 <option value="scotiabank">ScotiaBank</option>
                 <option value="visa">Visa</option>
@@ -57,8 +57,8 @@
                 <option value="BBVA">BBVA</option>
               </select><br>
               Numero de la targeta: <input type="text" name="number"><br>
-              Contraseña: <input type="password" name="number"><br>
-              Confirme la cotraseña: <input type="password" name="number"><br>
+              Fecha de vencimiento: <input type="date" name="number"><br>
+              CSC: <input type="text" name="number"><br>
           </div>
 
 	        <div class="modal-footer">             
