--- a/app/views/movie/show.html.erb
+++ b/app/views/movie/show.html.erb
@@ -67,7 +67,7 @@
 
     <div class="form-group col-xs-9">
       <strong>imagen:</strong>
-      <%= image_tag @movie.image_url(:thumb).to_s %>
+      <%= image_tag @movie.image_url.to_s %>
     </div>
     
 
