--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -48,7 +48,7 @@
           
           <div class="form-group col-xs-9" id="pagoPuntos" hidden>
             <%= f.label "Tiene una cantida de puntos aceptable" %><br>
-            <%= f.radio_button :wayPAy, "", :id=>"compra" %>
+            <%= f.radio_button :wayPAy, "2", :id=>"compra" %>
             <%= f.label :Pagar_con_puntos %>
           </div>
 
