--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,17 +6,17 @@
 
   <div class="field">
     <%= f.label :Nombre %><br />
-    <%= f.email_field :name, autocomplete: "on", autofocus: true %>
+    <%= f.text_field :name, autocomplete: "on", autofocus: true %>
   </div>
 
   <div class="field">
     <%= f.label :Apellido %><br />
-    <%= f.email_field :lastName, autocomplete: "on" %>
+    <%= f.text_field :lastName, autocomplete: "on" %>
   </div>
   
     <div class="field">
     <%= f.label :Numero_de_documento %><br />
-    <%= f.email_field :document, autocomplete: "on" %>
+    <%= f.text_field :document, autocomplete: "on" %>
   </div>
 
   <div class="field">
