--- a/app/views/movie/edit.html.erb
+++ b/app/views/movie/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_for movie_path(@socio), method: :patch do |f| %>
+<%= form_for movie_path(@movie), method: :patch do |f| %>
   <% if @movie.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@movie.errors.count, "error") %> prohibited this movie from being saved:</h2>
@@ -13,38 +13,65 @@
 
   <h1>Editar la pelicula</h1>
 
-  <div class="field">
-    <%= f.label :Horario%><br>
-    <%= f.collection_select(:horary_id, @horaries, :id, :name, {:prompt => 'Seleccione un horario'}, {:selected => params[:id]}) %>
-  </div>
-  <div class="field">
+<div class="field">
     <%= f.label :Sala %><br>
     <%= f.collection_select(:hall_id, @halls, :id, :name, {:prompt => 'Seleccione una sala'}, { :selected => params[:id]}) %>
   </div>
+
   <div class="field">
     <%= f.label :Nombre%><br>
     <%= f.text_field :name %>
   </div>
+
   <div class="field">
     <%= f.label :Duracion_Horas %><br>
     <%= f.number_field :duration %>
   </div>
+
   <div class="field">
     <%= f.label :información %><br>
     <%= f.text_field :information %>
   </div>
-  <div class="field">
-    <%= f.label :dimensión %><br>
-    <%= f.text_field :format %>
-  </div>
+
   <div class="field">
     <%= f.label :Calidad %><br>
     <%= f.collection_select(:quality_id, @qualities, :id, :name, {:prompt => 'Seleccione una calidad'}, {:selected => params[:id]}) %>
   </div>
+
+  <hr> 
+  Informacion en a venta de boleta 
+  <hr>
+
   <div class="field">
-    <%= f.label :Sillas %><br>
-    <%= f.collection_select(:chair_id, @chairs, :id, :name, {:prompt => 'Seleccione una antidad de sillas disponibles'}, {:selected => params[:id]}) %>
+    <%= f.label :Precio_silla_general %><br>
+    <%= f.text_field :priceGeneral %>
   </div>
+
+  <div class="field">
+    <%= f.label :Precio_silla_preferencia %><br>
+    <%= f.text_field :pricePopular %>
+  </div>
+
+  <div class="field">
+    <%= f.label :Precio_en_puntos_silla_general %><br>
+    <%= f.text_field :pointsGeneral %>
+  </div>
+
+  <div class="field">
+    <%= f.label :Precio_en_puntos_silla_preferencia %><br>
+    <%= f.text_field :pountsPopular %>
+  </div>
+
+  <div class="field">
+    <%= f.label :Numero_de_puntos_por_compra_de_voleta_general %><br>
+    <%= f.text_field :setPoints %>
+  </div>
+
+
+    <%= f.label :Imagen %><br /> 
+    <%= f.file_field :image %>
+
+
   <div class="actions">
     <%= f.submit %>
   </div>
