--- a/app/views/movie/index.html.erb
+++ b/app/views/movie/index.html.erb
@@ -26,16 +26,17 @@
     <table class="table">
       <thead>
         <tr>
+          <th>Fecha</th>
           <th>Horario</th>
           <th>Nombre</th>
-          <th>Sede</th>
           <th colspan="3"></th>
         </tr>
       </thead>
       <tbody>
         <% @movies.each do |movie| %>
           <tr>
-            <td><%= movie.horary.hourBegin %></td>
+            <td><%t = movie.horary.begin %><%= t.day.to_s + " " + t.strftime("%b") %> <%= t.strftime("%Y") %></td>
+            <td><%= movie.horary.hourBegin.strftime('%H:%M') %></td>
             <td><%= movie.name %></td>
             <td><%= link_to 'Ver la informacion de la pelicula', movie, :class=>"btn btn-primary" %></td>
           </tr>
@@ -49,7 +50,8 @@
 
   
 <%if current_user && current_user.has_role?(:admin)  %>
-  <%= link_to 'Agregar nueva pelicula', new_movie_path %>
+  <%= link_to 'Agregar nueva pelicula', new_movie_path, :class=>"btn btn-primary" %>
+  <%= link_to 'Index principal', root_path, :class=>"btn btn-primary" %>
 <%else %>
-  <%= link_to 'Index principal', root_path %>
+  <%= link_to 'Index principal', root_path, :class=>"btn btn-primary" %>
 <%end%>
